# open-notebooklm

./: .gitignore  Dockerfile  README.md  app.py  constants.py  nohup.out  pyproject.toml  requirements.txt  utils.py
.devcontainer/: Dockerfile  Dockerfile.txt  devcontainer.json  docker-compose.yml
.github/workflows/: main.yml
.streamlit/: config.toml
app/: app_run_4.py  config.py  constants.py  main.py  prompts.py  schema.py  streamlit.py  utils.py
app/services/: generate_audios.py  generate_podcast.py  generate_script.py  hf_audio.py  process_source.py  transcript_audio.py
app/st_page_funcs/: sessions_about.py
